# Noel

./: .bazelignore  .bazelrc  .editorconfig  .envrc  .gitignore  .noel-version  BUILD.bazel  Dockerfile  LICENSE  MODULE.bazel  Makefile  README.md  build.gradle.kts  docker-compose.yml  flake.nix  mvn_install.json  package-lock.json  package.json  settings.gradle.kts  tsconfig.json
assets/: HEADING
bazel/: BUILD.bazel  module.bzl
bot/: BUILD.bazel  build.gradle.kts
bot/resources/logback/: logback.xml
bot/src/dev/floofy/: Noel.java
bot/src/dev/floofy/noel/: Bootstrap.java  BuildInfo.java  ExecutorsModule.java
bot/src/main/java/dev/floofy/noel/bot/: Bootstrap.java
bot/src/main/java/dev/floofy/noel/bot/bootstrap/: BootstrapPhase.java
bot/src/main/java/dev/floofy/noel/bot/bootstrap/phases/: ConfigureModulesBootstrapPhase.java  PreInitBootstrapPhase.java  ShutdownPhaseThread.java
bot/src/main/java/dev/floofy/noel/bot/commands/community/: CommunityCommandsModule.java
bot/src/main/java/dev/floofy/noel/bot/commands/community/birthdays/: BirthdaysCommand.java
bot/src/main/java/dev/floofy/noel/bot/commands/general/: AboutMeCommand.java  GeneralCommandsModule.java  HelpCommand.java  PingCommand.java  WahCommand.java
bot/src/main/java/dev/floofy/noel/bot/commands/noelware/: NoelwareCommandsModule.java
bot/src/main/java/dev/floofy/noel/bot/commands/noelware/infra/: CheckInfraStatusCommand.java  HealthcheckCommand.java  ListPodsCommand.java
bot/src/main/java/dev/floofy/noel/bot/commands/noelware/linear/: IssuesSubcommandGroup.java  LinearCommand.java
bot/src/main/resources/config/: logback.properties  logback.xml
build-logic/: build.gradle.kts  settings.gradle.kts
build-logic/src/main/kotlin/: Extensions.kt  noel-module.gradle.kts
common/: build.gradle.kts
common/src/main/java/dev/floofy/noel/: NoelInfo.java  PreviousReferenceIterator.java  Tuple.java
core/: BUILD.bazel
core/settings/: BUILD.bazel
core/settings/src/dev/floofy/noel/settings/: JSONPath.java  Module.java  Setting.java  Settings.java
core/src/dev/floofy/: BUILD.bazel  Noel.java
core/src/dev/floofy/noel/: BUILD.bazel  NoelInfo.java  ThreadFactory.java
framework/: BUILD.bazel
framework/src/dev/floofy/noel/discord/commands/: GeneralCommandsModule.java  HelpCommand.java  PingCommand.java
framework/src/dev/floofy/noel/discord/framework/: AbstractCommand.java  CommandContext.java  CommandOption.java  Framework.java  FrameworkModule.java
framework/src/dev/floofy/noel/discord/framework/annotations/: Command.java  Option.java
framework/src/dev/floofy/noel/discord/framework/impl/: NoelCommandContext.java
framework/src/main/java/dev/floofy/noel/discord/commands/: AbstractCommand.java  CommandContext.java  CommandOption.java  CommandsFrameworkModule.java
framework/src/main/java/dev/floofy/noel/discord/commands/annotations/: Command.java  ModalPrompt.java  Option.java  Subcommand.java  SubcommandGroup.java
framework/src/main/java/dev/floofy/noel/discord/commands/internal/: CommandHandler.java  NoelCommandContext.java
framework/src/main/java/dev/floofy/noel/discord/commands/subcommands/: AbstractSubcommand.java  SubcommandGroup.java
gradle/: build.versions.toml
gradle/wrapper/: gradle-wrapper.properties
hack/: stamp.sh
modules/: BUILD.bazel  build.gradle.kts
modules/birthdays/: BUILD.bazel
modules/discord/: BUILD.bazel  build.gradle.kts
modules/discord/src/dev/floofy/noel/modules/discord/: EventListener.java  JDAModule.java  Module.java
modules/discord/src/main/java/dev/floofy/noel/modules/discord/: GenericEventAdapter.java  JDAModule.java
modules/http/client/: BUILD.bazel
modules/http/client/src/dev/floofy/noel/modules/http/client/: Module.java
modules/http/server/: BUILD.bazel
modules/http/server/src/dev/floofy/noel/http/: Server.java
modules/http/server/src/dev/floofy/noel/http/server/: HttpMethod.java  Request.java  Response.java  ResponseAlreadyOutgoingException.java  Router.java
modules/http/server/src/dev/floofy/noel/http/server/impl/: NettyServerImpl.java  RequestImpl.java  ResponseImpl.java  RouterImpl.java
modules/http/server/src/dev/floofy/noel/modules/: HttpServerModule.java
modules/logging/: build.gradle.kts
modules/mongodb/: BUILD.bazel
modules/settings/: BUILD.bazel
modules/settings/src/dev/floofy/noel/modules/settings/: JSONPath.java  Module.java  Setting.java  Settings.java
modules/src/dev/floofy/noel/modules/: AbstractNoelModule.java  ModuleLocator.java  ServiceLocator.java
modules/src/dev/floofy/noel/modules/annotations/: Init.java  Initializer.java  Module.java  Teardown.java
nix/: devshell.nix
pinecone/: BUILD.bazel
pinecone/src/dev/floofy/noel/: Pinecone.java
pinecone/src/dev/floofy/noel/pinecone/: AbstractSlashCommand.java  CommandContext.java  Module.java  Option.java  RequiredOptionNotFoundException.java  Subcommand.java  SubcommandGroup.java
src/: Constants.ts  main.ts
src/@types/: loggaby.d.ts
src/components/: Config.ts  Discord.ts
src/jobs/: CuteJob.ts
src/structures/: Application.ts  Command.ts  Component.ts  Job.ts  Logger.ts  Message.ts  Noel.ts  References.ts  Service.ts  index.ts
src/structures/commands/: Command.ts  CommandMessage.ts  Subcommand.ts
src/structures/commands/checks/: OwnerOnly.ts  StaffOnly.ts  index.ts
src/structures/commands/decorators/: Check.ts
src/structures/commands/decorators/internal/: MetadataKeys.ts
src/structures/components/: CommandsComponent.ts  Config.ts  ConfigurationComponent.ts  Database.ts  Discord.ts  DiscordComponent.ts  JobComponent.ts  NoelComponent.ts  Telegram.ts
src/structures/decorators/: Component.ts  Injectable.ts  NotInjectable.ts  Service.ts  Subscribe.ts  index.ts
src/structures/interfaces/: MetaKeys.ts  Subscription.ts
src/structures/jobs/: Job.ts
src/structures/managers/: CommandManager.ts  DatabaseManager.ts  JobManager.ts
src/structures/parsers/: DiscordToTelegram.ts
src/structures/services/: CommandService.ts  JobService.ts  ListenerService.ts
tools/: BUILD.bazel  format.sh  repin-maven-install
(+40 files in other folders)
