# 🐾✨ Noel: Discord bot made to manage my servers made in Java
# Copyright 2021-2026 Noel Towa <cutie@floofy.dev>, et al.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

module(
    name = "noel",
    compatibility_level = 0,
    repo_name = "dev_floofy_noel"
)

bazel_dep(name = "rules_jvm_external", version = "6.8")
bazel_dep(name = "rules_java", version = "8.16.1")

# Setup Maven repository
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    known_contributing_modules = ["noel", "protobuf"],
    artifacts = [
        "io.netty:netty-transport-native-unix-common:4.2.10.Final",
        "tools.jackson.dataformat:jackson-dataformat-yaml:3.0.4",
        "io.opentelemetry:opentelemetry-exporter-otlp:1.59.0",
        "tools.jackson.core:jackson-databind:3.0.4",
        "io.opentelemetry:opentelemetry-api:1.59.0",
        "io.opentelemetry:opentelemetry-sdk:1.59.0",
        "io.netty:netty-codec-http:4.2.10.Final",
        "ch.qos.logback:logback-classic:1.5.31",
        "org.mongodb:mongodb-driver-sync:5.6.3",
        "io.netty:netty-transport:4.2.10.Final",
        "tools.jackson.core:jackson-core:3.0.4",
        "org.jetbrains:annotations:26.0.2-1",
        "ch.qos.logback:logback-core:1.5.31",
        "io.netty:netty-buffer:4.2.10.Final",
        "io.netty:netty-common:4.2.10.Final",
        "com.squareup.okhttp3:okhttp:5.3.2",
        "com.google.inject:guice:7.0.0",
        "org.slf4j:slf4j-api:2.0.17",
        "io.sentry:sentry:8.32.0",
        "net.dv8tion:JDA:6.3.0",
    ],
    repositories = [
        "https://repo1.maven.org/maven2/",
    ],
    lock_file = "//:mvn_install.json"
)

use_repo(maven, "maven", "unpinned_maven")
