# 🐾✨ Noel: Discord bot made to manage my servers made in Java
# Copyright 2021-2025 Noel Towa <cutie@floofy.dev>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_jvm_external//:defs.bzl", "artifact")
load("@rules_java//java:defs.bzl", "java_binary")

java_binary(
    name = "bootstrap",
    srcs = ["src/dev/floofy/noel/Bootstrap.java"],
    main_class = "dev.floofy.noel.Bootstrap",
    visibility = ["//visibility:public"],
    runtime_deps = [
        "//core/settings",
        "//framework",
        "//modules/discord"
    ],
    deps = [
        "//core/src/dev/floofy/noel:info",
        "//core/src/dev/floofy:noel",

        artifact("ch.qos.logback:logback-classic"),
        artifact("ch.qos.logback:logback-core"),
        artifact("org.jetbrains:annotations"),
        artifact("org.slf4j:slf4j-api")
    ],
    stamp = 1,
    resources = glob(["resources/**"]) + ["//core:mk_version_props"],
)
