# 🐾✨ Noel: Discord bot made to manage my servers made in Java
# Copyright 2021-2025 Noel Towa <cutie@floofy.dev>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_jvm_external//:defs.bzl", "artifact")
load("//bazel:module.bzl", "noel_module")

noel_module(
    name = "discord",
    srcs = glob(["src/dev/floofy/noel/modules/discord/**/*.java"]),
    resources = glob(["resources/**"]),
    strip_prefix = "modules/discord",
    deps = [
        artifact("org.jetbrains:annotations"),
        artifact("com.google.inject:guice"),
        artifact("org.slf4j:slf4j-api"),
        artifact("net.dv8tion:JDA")
    ]
)
